@@ -36,6 +36,7 @@ Improvements::
 
 Bug Fixes::
 
+* resolve attribute references in target of image in running content (#2361)
 * resolve remote image in document title or section title with autogenerated ID
 * keep caret between items in menu macro with previous item if items wrap
 * don't include children of section with empty title in TOC
